fixed Google Font

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>This is a Space Ship Company</title>
     <link rel="stylesheet" href="/styles/styles.css" />
-    <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="wrapper">
